Adds primitive debug option to settings